Dark mode, SN launch, privacy friendly tracking

--- a/faq.html
+++ b/faq.html
@@ -118,7 +118,7 @@
           <p>No. Buoy is dedicated exclusively to Bitcoin and its ecosystem. We believe in staying focused on what makes Bitcoin unique.</p>
 
           <h2>Are the services you list safe to use?</h2>
-          <p>We provide key details like custody models, KYC requirements, and user reviews to help you assess each service. Ultimately, users should do their own due diligence before using any service. Verify, don't trust.</p>
+          <p>We provide key details like custody models, KYC requirements, and user reviews to help you assess each service. Ultimately, users should do their own due diligence before using any service. Don't trust, verify.</p>
 
           <h2>How often do you update the service information?</h2>
           <p>We aim to keep our information up-to-date with the latest offerings, updates, and feedback from the Bitcoin community. If you spot outdated information, please let us know!</p>
