--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     <h3>Get new Bitcoin services and tips in your inbox every month.</h3>
     <form id="newsletter-form">
       <input type="email" id="newsletter-email" name="email" placeholder="you@your-email.com" required>
-      <button type="submit">Subscribe →</button>
+      <button type="submit">Get updates →</button>
     </form>
     <div id="newsletter-message" style="display:none;"></div>
     <div id="newsletter-sending" style="display:none;">Sending...</div>
@@ -356,7 +356,7 @@
   }
 }</script>
   <script src="js/questionnaire.js"></script>
-  <script src="js/script.js?v=8"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
 
