--- a/buy-bitcoin.html
+++ b/buy-bitcoin.html
@@ -110,6 +110,7 @@
 	  </div>
 	  <h3>No-KYC (Peer 2 Peer)</h3>
 	  <div class="grid-container">
+		<div class="card"><img src="images/bisq.svg" alt="bisq" class="svg-icon"><span></span></div>
 		<div class="card"><img src="images/hodlhodl.svg" alt="hodlhodl" class="svg-icon"><span></span></div>
 		<div class="card"><img src="images/peach.svg" alt="peach" class="svg-icon"><span></span></div>
 		<div class="card"><img src="images/pocket.svg" alt="pocket" class="svg-icon"><span></span></div>
