--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 			<div class="card"><img src="images/hodlhodl.svg" alt="hodlhodl" class="svg-icon"><span></span></div>
 			<div class="card"><img src="images/bitonic.svg" alt="bitonic" class="svg-icon"><span></span></div>
 			<div class="card"><img src="images/peach.svg" alt="peach" class="svg-icon"><span></span></div>
+			<div class="card"><img src="images/bisq.svg" alt="bisq" class="svg-icon"><span></span></div>
 			<div class="card"><img src="images/bull-bitcoin.svg" alt="bull bitcoin" class="svg-icon"><span></span></div>
 			<div class="card"><img src="images/pocket.svg" alt="pocket" class="svg-icon"><span></span></div>
       </div>
