--- a/services/opennode.html
+++ b/services/opennode.html
@@ -505,8 +505,8 @@
   </div>
 </footer>
 
-  <script defer src="/js/script.js?v=9"></script>
-  <script defer src="/js/compare.js?v=9"></script>
+  <script defer src="/js/script.js"></script>
+  <script defer src="/js/compare.js"></script>
 </body>
 </html>
 
