--- a/services/unchained.html
+++ b/services/unchained.html
@@ -498,8 +498,8 @@
   </div>
 </footer>
 
-  <script defer src="/js/script.js?v=9"></script>
-  <script defer src="/js/compare.js?v=9"></script>
+  <script defer src="/js/script.js"></script>
+  <script defer src="/js/compare.js"></script>
 </body>
 </html>
 
