Persistent manual location

--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
     <p>We’re Bitcoin-only and independent. No paid placements; it's value for value only. Our mission is to make it effortless for newcomers to choose safe, practical Bitcoin tools and move toward self-sovereignty.</p>
     <p>How it works: we auto-detect your country to show services available in your jurisdiction. If detection isn’t possible, use the country selector in the menu. Add up to <strong>2</strong> services on mobile or <strong>3</strong> on desktop to compare side-by-side.</p>
     <p>Ready to start? Compare by category:
-      <a href="compare.html?category=Buy">Buy</a>,
-      <a href="compare.html?category=Spend">Spend</a>,
-      <a href="compare.html?category=Store">Store</a>,
-      <a href="compare.html?category=Merchant">Merchant</a>,
-      <a href="compare.html?category=Node">Node</a>.
+      <a href="buy-bitcoin.html">Buy</a>,
+      <a href="spend-bitcoin.html">Spend</a>,
+      <a href="store-it-safely.html">Store</a>,
+      <a href="accept-bitcoin-as-a-merchant.html">Merchant</a>,
+      <a href="run-my-own-node.html">Node</a>.
       Or read our guides:
       <a href="what-is-bitcoin.html">What is Bitcoin?</a> and
       <a href="what-is-lightning.html">What is Lightning?</a>.
