--- a/service.html
+++ b/service.html
@@ -164,7 +164,7 @@
   </div>
 </footer>
 
-  <script defer src="/js/script.js"></script>
+  <script defer src="js/script.js"></script>
   <script defer src="/js/compare.js"></script>
 </body>
 </html>
