--- a/services/fold.html
+++ b/services/fold.html
@@ -499,6 +499,7 @@
 
   <script defer src="js/script.js"></script>
   <script defer src="/js/compare.js"></script>
+  <script defer src="/js/service-hydrate.js"></script>
 </body>
 </html>
 
