--- a/services/mynode.html
+++ b/services/mynode.html
@@ -441,6 +441,7 @@
 
   <script defer src="js/script.js"></script>
   <script defer src="/js/compare.js"></script>
+  <script defer src="/js/service-hydrate.js"></script>
 </body>
 </html>
 
