H2 to H1 on a-VS-b pages, breadcrumbs

--- a/compare/anchorwatch-vs-sparrow.html
+++ b/compare/anchorwatch-vs-sparrow.html
@@ -36,7 +36,9 @@
     window.__BUOY_COMPARE__ = [a,b];
   } catch(e){}
 })();
-</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"AnchorWatch vs Sparrow — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/anchorwatch-vs-sparrow.html","description":"Compare AnchorWatch and Sparrow (Store it safely): fees, custody, features, and more.","about":[{"@type":"Organization","name":"AnchorWatch","url":"https://anchorwatch.com"},{"@type":"Organization","name":"Sparrow","url":"https://sparrowwallet.com"}]}</script></head>
+</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"AnchorWatch vs Sparrow — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/anchorwatch-vs-sparrow.html","description":"Compare AnchorWatch and Sparrow (Store it safely): fees, custody, features, and more.","about":[{"@type":"Organization","name":"AnchorWatch","url":"https://anchorwatch.com"},{"@type":"Organization","name":"Sparrow","url":"https://sparrowwallet.com"}]}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/","name":"Home"}},{"@type":"ListItem","position":2,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/store-it-safely.html","name":"Store it safely"}},{"@type":"ListItem","position":3,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/compare/anchorwatch-vs-sparrow.html","name":"AnchorWatch vs Sparrow"}}]}</script>
+</head>
 <body>
   <div class="container">
  <header>
@@ -110,8 +112,12 @@
 
 </header>
  <main>
-  <div class="category-header">
-    <h2 id="category-title">AnchorWatch vs Sparrow</h2>
+  <div class="category-header category-header--vs">
+    <h1 id="page-title">AnchorWatch vs Sparrow</h1>
+    
+<nav class="breadcrumbs" aria-label="Breadcrumb">
+  <a href="/">Home</a> › <a href="/store-it-safely.html"><span id="breadcrumb-category-label">Store it safely</span></a> › <span id="breadcrumb-current" aria-current="page">AnchorWatch vs Sparrow</span>
+</nav>
   </div>
 <!-- BUILD:START -->
 
