--- a/compare/bull-bitcoin-vs-relai.html
+++ b/compare/bull-bitcoin-vs-relai.html
@@ -36,7 +36,9 @@
     window.__BUOY_COMPARE__ = [a,b];
   } catch(e){}
 })();
-</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Bull Bitcoin vs Relai — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/bull-bitcoin-vs-relai.html","description":"Compare Bull Bitcoin and Relai (Buy Bitcoin): fees, custody, features, and more.","about":[{"@type":"Organization","name":"Bull Bitcoin","url":"https://www.bullbitcoin.com"},{"@type":"Organization","name":"Relai","url":"https://relai.app"}]}</script></head>
+</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Bull Bitcoin vs Relai — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/bull-bitcoin-vs-relai.html","description":"Compare Bull Bitcoin and Relai (Buy Bitcoin): fees, custody, features, and more.","about":[{"@type":"Organization","name":"Bull Bitcoin","url":"https://www.bullbitcoin.com"},{"@type":"Organization","name":"Relai","url":"https://relai.app"}]}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/","name":"Home"}},{"@type":"ListItem","position":2,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/buy-bitcoin.html","name":"Buy Bitcoin"}},{"@type":"ListItem","position":3,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/compare/bull-bitcoin-vs-relai.html","name":"Bull Bitcoin vs Relai"}}]}</script>
+</head>
 <body>
   <div class="container">
  <header>
@@ -110,8 +112,12 @@
 
 </header>
  <main>
-  <div class="category-header">
-    <h2 id="category-title">Bull Bitcoin vs Relai</h2>
+  <div class="category-header category-header--vs">
+    <h1 id="page-title">Bull Bitcoin vs Relai</h1>
+    
+<nav class="breadcrumbs" aria-label="Breadcrumb">
+  <a href="/">Home</a> › <a href="/buy-bitcoin.html"><span id="breadcrumb-category-label">Buy Bitcoin</span></a> › <span id="breadcrumb-current" aria-current="page">Bull Bitcoin vs Relai</span>
+</nav>
   </div>
 <!-- BUILD:START -->
 
