--- a/compare/fold-vs-phoenix.html
+++ b/compare/fold-vs-phoenix.html
@@ -36,7 +36,9 @@
     window.__BUOY_COMPARE__ = [a,b];
   } catch(e){}
 })();
-</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Fold vs Phoenix — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/fold-vs-phoenix.html","description":"Compare Fold and Phoenix (Spend Bitcoin): fees, custody, features, and more.","about":[{"@type":"Organization","name":"Fold","url":"https://foldapp.com"},{"@type":"Organization","name":"Phoenix","url":"https://phoenix.acinq.co"}]}</script></head>
+</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Fold vs Phoenix — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/fold-vs-phoenix.html","description":"Compare Fold and Phoenix (Spend Bitcoin): fees, custody, features, and more.","about":[{"@type":"Organization","name":"Fold","url":"https://foldapp.com"},{"@type":"Organization","name":"Phoenix","url":"https://phoenix.acinq.co"}]}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/","name":"Home"}},{"@type":"ListItem","position":2,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/spend-bitcoin.html","name":"Spend Bitcoin"}},{"@type":"ListItem","position":3,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/compare/fold-vs-phoenix.html","name":"Fold vs Phoenix"}}]}</script>
+</head>
 <body>
   <div class="container">
  <header>
@@ -110,8 +112,12 @@
 
 </header>
  <main>
-  <div class="category-header">
-    <h2 id="category-title">Fold vs Phoenix</h2>
+  <div class="category-header category-header--vs">
+    <h1 id="page-title">Fold vs Phoenix</h1>
+    
+<nav class="breadcrumbs" aria-label="Breadcrumb">
+  <a href="/">Home</a> › <a href="/spend-bitcoin.html"><span id="breadcrumb-category-label">Spend Bitcoin</span></a> › <span id="breadcrumb-current" aria-current="page">Fold vs Phoenix</span>
+</nav>
   </div>
 <!-- BUILD:START -->
 
