--- a/compare/bisq-vs-bitonic.html
+++ b/compare/bisq-vs-bitonic.html
@@ -36,7 +36,9 @@
     window.__BUOY_COMPARE__ = [a,b];
   } catch(e){}
 })();
-</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Bisq vs Bitonic — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/bisq-vs-bitonic.html","description":"Compare Bisq and Bitonic (Buy Bitcoin): fees, custody, features, and more.","about":[{"@type":"Organization","name":"Bisq","url":"https://bisq.network"},{"@type":"Organization","name":"Bitonic","url":"https://bitonic.nl"}]}</script></head>
+</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Bisq vs Bitonic — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/bisq-vs-bitonic.html","description":"Compare Bisq and Bitonic (Buy Bitcoin): fees, custody, features, and more.","about":[{"@type":"Organization","name":"Bisq","url":"https://bisq.network"},{"@type":"Organization","name":"Bitonic","url":"https://bitonic.nl"}]}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/","name":"Home"}},{"@type":"ListItem","position":2,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/buy-bitcoin.html","name":"Buy Bitcoin"}},{"@type":"ListItem","position":3,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/compare/bisq-vs-bitonic.html","name":"Bisq vs Bitonic"}}]}</script>
+</head>
 <body>
   <div class="container">
  <header>
@@ -110,8 +112,12 @@
 
 </header>
  <main>
-  <div class="category-header">
-    <h2 id="category-title">Bisq vs Bitonic</h2>
+  <div class="category-header category-header--vs">
+    <h1 id="page-title">Bisq vs Bitonic</h1>
+    
+<nav class="breadcrumbs" aria-label="Breadcrumb">
+  <a href="/">Home</a> › <a href="/buy-bitcoin.html"><span id="breadcrumb-category-label">Buy Bitcoin</span></a> › <span id="breadcrumb-current" aria-current="page">Bisq vs Bitonic</span>
+</nav>
   </div>
 <!-- BUILD:START -->
 
