--- a/compare/breez-vs-muun.html
+++ b/compare/breez-vs-muun.html
@@ -36,7 +36,9 @@
     window.__BUOY_COMPARE__ = [a,b];
   } catch(e){}
 })();
-</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Breez vs Muun — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/breez-vs-muun.html","description":"Compare Breez and Muun (Spend Bitcoin): fees, custody, features, and more.","about":[{"@type":"Organization","name":"Breez","url":"https://breez.technology"},{"@type":"Organization","name":"Muun","url":"https://muun.com"}]}</script></head>
+</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Breez vs Muun — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/breez-vs-muun.html","description":"Compare Breez and Muun (Spend Bitcoin): fees, custody, features, and more.","about":[{"@type":"Organization","name":"Breez","url":"https://breez.technology"},{"@type":"Organization","name":"Muun","url":"https://muun.com"}]}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/","name":"Home"}},{"@type":"ListItem","position":2,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/spend-bitcoin.html","name":"Spend Bitcoin"}},{"@type":"ListItem","position":3,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/compare/breez-vs-muun.html","name":"Breez vs Muun"}}]}</script>
+</head>
 <body>
   <div class="container">
  <header>
@@ -110,8 +112,12 @@
 
 </header>
  <main>
-  <div class="category-header">
-    <h2 id="category-title">Breez vs Muun</h2>
+  <div class="category-header category-header--vs">
+    <h1 id="page-title">Breez vs Muun</h1>
+    
+<nav class="breadcrumbs" aria-label="Breadcrumb">
+  <a href="/">Home</a> › <a href="/spend-bitcoin.html"><span id="breadcrumb-category-label">Spend Bitcoin</span></a> › <span id="breadcrumb-current" aria-current="page">Breez vs Muun</span>
+</nav>
   </div>
 <!-- BUILD:START -->
 
