--- a/compare/btc-pay-vs-lightspark.html
+++ b/compare/btc-pay-vs-lightspark.html
@@ -36,7 +36,9 @@
     window.__BUOY_COMPARE__ = [a,b];
   } catch(e){}
 })();
-</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"BTC Pay vs Lightspark — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/btc-pay-vs-lightspark.html","description":"Compare BTC Pay and Lightspark (Accept Bitcoin as a merchant): fees, custody, features, and more.","about":[{"@type":"Organization","name":"BTC Pay","url":"https://btcpayserver.org"},{"@type":"Organization","name":"Lightspark","url":"https://www.lightspark.com"}]}</script></head>
+</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"BTC Pay vs Lightspark — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/btc-pay-vs-lightspark.html","description":"Compare BTC Pay and Lightspark (Accept Bitcoin as a merchant): fees, custody, features, and more.","about":[{"@type":"Organization","name":"BTC Pay","url":"https://btcpayserver.org"},{"@type":"Organization","name":"Lightspark","url":"https://www.lightspark.com"}]}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/","name":"Home"}},{"@type":"ListItem","position":2,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/accept-bitcoin-as-a-merchant.html","name":"Accept Bitcoin as a merchant"}},{"@type":"ListItem","position":3,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/compare/btc-pay-vs-lightspark.html","name":"BTC Pay vs Lightspark"}}]}</script>
+</head>
 <body>
   <div class="container">
  <header>
@@ -110,8 +112,12 @@
 
 </header>
  <main>
-  <div class="category-header">
-    <h2 id="category-title">BTC Pay vs Lightspark</h2>
+  <div class="category-header category-header--vs">
+    <h1 id="page-title">BTC Pay vs Lightspark</h1>
+    
+<nav class="breadcrumbs" aria-label="Breadcrumb">
+  <a href="/">Home</a> › <a href="/accept-bitcoin-as-a-merchant.html"><span id="breadcrumb-category-label">Accept Bitcoin as a merchant</span></a> › <span id="breadcrumb-current" aria-current="page">BTC Pay vs Lightspark</span>
+</nav>
   </div>
 <!-- BUILD:START -->
 
