--- a/compare/pocket-vs-strike.html
+++ b/compare/pocket-vs-strike.html
@@ -36,7 +36,9 @@
     window.__BUOY_COMPARE__ = [a,b];
   } catch(e){}
 })();
-</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Pocket vs Strike — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/pocket-vs-strike.html","description":"Compare Pocket and Strike (Buy Bitcoin): fees, custody, features, and more.","about":[{"@type":"Organization","name":"Pocket","url":"https://pocketbitcoin.com"},{"@type":"Organization","name":"Strike","url":"https://strike.me"}]}</script></head>
+</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Pocket vs Strike — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/pocket-vs-strike.html","description":"Compare Pocket and Strike (Buy Bitcoin): fees, custody, features, and more.","about":[{"@type":"Organization","name":"Pocket","url":"https://pocketbitcoin.com"},{"@type":"Organization","name":"Strike","url":"https://strike.me"}]}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/","name":"Home"}},{"@type":"ListItem","position":2,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/buy-bitcoin.html","name":"Buy Bitcoin"}},{"@type":"ListItem","position":3,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/compare/pocket-vs-strike.html","name":"Pocket vs Strike"}}]}</script>
+</head>
 <body>
   <div class="container">
  <header>
@@ -110,8 +112,12 @@
 
 </header>
  <main>
-  <div class="category-header">
-    <h2 id="category-title">Pocket vs Strike</h2>
+  <div class="category-header category-header--vs">
+    <h1 id="page-title">Pocket vs Strike</h1>
+    
+<nav class="breadcrumbs" aria-label="Breadcrumb">
+  <a href="/">Home</a> › <a href="/buy-bitcoin.html"><span id="breadcrumb-category-label">Buy Bitcoin</span></a> › <span id="breadcrumb-current" aria-current="page">Pocket vs Strike</span>
+</nav>
   </div>
 <!-- BUILD:START -->
 
