--- a/compare/start9-vs-umbrel.html
+++ b/compare/start9-vs-umbrel.html
@@ -36,7 +36,9 @@
     window.__BUOY_COMPARE__ = [a,b];
   } catch(e){}
 })();
-</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Start9 vs Umbrel — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/start9-vs-umbrel.html","description":"Compare Start9 and Umbrel (Run my own node): fees, custody, features, and more.","about":[{"@type":"Organization","name":"Start9","url":"https://start9.com"},{"@type":"Organization","name":"Umbrel","url":"https://umbrel.com"}]}</script></head>
+</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","name":"Start9 vs Umbrel — Which is better? | Buoy Bitcoin","url":"https://buoybitcoin.com/compare/start9-vs-umbrel.html","description":"Compare Start9 and Umbrel (Run my own node): fees, custody, features, and more.","about":[{"@type":"Organization","name":"Start9","url":"https://start9.com"},{"@type":"Organization","name":"Umbrel","url":"https://umbrel.com"}]}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/","name":"Home"}},{"@type":"ListItem","position":2,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/run-my-own-node.html","name":"Run my own node"}},{"@type":"ListItem","position":3,"item":{"@type":"WebPage","@id":"https://buoybitcoin.com/compare/start9-vs-umbrel.html","name":"Start9 vs Umbrel"}}]}</script>
+</head>
 <body>
   <div class="container">
  <header>
@@ -110,8 +112,12 @@
 
 </header>
  <main>
-  <div class="category-header">
-    <h2 id="category-title">Start9 vs Umbrel</h2>
+  <div class="category-header category-header--vs">
+    <h1 id="page-title">Start9 vs Umbrel</h1>
+    
+<nav class="breadcrumbs" aria-label="Breadcrumb">
+  <a href="/">Home</a> › <a href="/run-my-own-node.html"><span id="breadcrumb-category-label">Run my own node</span></a> › <span id="breadcrumb-current" aria-current="page">Start9 vs Umbrel</span>
+</nav>
   </div>
 <!-- BUILD:START -->
 
