Meta name robots extended

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <title>About Buoy Bitcoin - Guiding Users to Reliable Services</title>
   <meta name="description" content="Learn about Buoy Bitcoin's mission to guide new users to reliable Bitcoin services."/>
   <link rel="canonical" href="https://buoybitcoin.com/about.html"/>
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/about.html"/>
   <meta property="og:title" content="About Buoy Bitcoin"/>
