--- a/accept-bitcoin-as-a-merchant.html
+++ b/accept-bitcoin-as-a-merchant.html
@@ -6,6 +6,7 @@
   <title>Accept Bitcoin as a merchant</title>
   <meta name="description" content="Discover how to accept Bitcoin as a merchant and start accepting payments in Bitcoin."/>
   <link rel="canonical" href="https://buoybitcoin.com/accept-bitcoin-as-a-merchant.html"/>
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/accept-bitcoin-as-a-merchant.html"/>
   <meta property="og:title" content="Accept Bitcoin as a merchant"/>
