--- a/buy-bitcoin.html
+++ b/buy-bitcoin.html
@@ -6,6 +6,7 @@
   <title>Buy Bitcoin - Find the Best Places to Buy Bitcoin Securely and Easily</title>
   <meta name="description" content="Find the best places to buy Bitcoin securely and easily."/>
   <link rel="canonical" href="https://buoybitcoin.com/buy-bitcoin.html"/>
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/buy-bitcoin.html"/>
   <meta property="og:title" content="Buy Bitcoin"/>
