--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,7 @@
   <title>FAQ - Frequently Asked Questions about Buoy Bitcoin</title>
   <meta name="description" content="Frequently Asked Questions about Buoy Bitcoin."/>
   <link rel="canonical" href="https://buoybitcoin.com/faq.html"/>
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/faq.html"/>
   <meta property="og:title" content="FAQ"/>
