--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Buoy Bitcoin - Compare Bitcoin-only services quickly</title>
   <meta name="description" content="Buoy Bitcoin helps you compare reliable Bitcoin-only services quickly and easily. Find the best options for wallets, exchanges, and more."/>
   <link rel="canonical" href="https://buoybitcoin.com/"/>
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/"/>
   <meta property="og:title" content="Buoy Bitcoin"/>
