--- a/run-my-own-node.html
+++ b/run-my-own-node.html
@@ -6,6 +6,7 @@
   <title>Run my own node - Join the Bitcoin network</title>
   <meta name="description" content="Discover how to run your own Bitcoin node and join the Bitcoin network."/>
   <link rel="canonical" href="https://buoybitcoin.com/run-my-own-node.html"/>
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/run-my-own-node.html"/>
   <meta property="og:title" content="Run my own node"/>
