--- a/spend-bitcoin.html
+++ b/spend-bitcoin.html
@@ -6,6 +6,7 @@
   <title>Spend Bitcoin - Find the best places to spend your Bitcoin securely and easily</title>
   <meta name="description" content="Find the best places to spend your Bitcoin securely and easily."/>
   <link rel="canonical" href="https://buoybitcoin.com/spend-bitcoin.html"/>
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/spend-bitcoin.html"/>
   <meta property="og:title" content="Spend Bitcoin"/>
