--- a/store-it-safely.html
+++ b/store-it-safely.html
@@ -6,6 +6,7 @@
   <title>Store it safely - Find the best places to store your Bitcoin securely</title>
   <meta name="description" content="Find the best places to store your Bitcoin securely and easily."/>
   <link rel="canonical" href="https://buoybitcoin.com/store-it-safely.html"/>
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/store-it-safely.html"/>
   <meta property="og:title" content="Store it safely"/>
