--- a/what-is-bitcoin.html
+++ b/what-is-bitcoin.html
@@ -6,6 +6,7 @@
   <title>What is Bitcoin? - Learn about Bitcoin, the open, decentralized, and secure protocol for money.</title>
   <meta name="description" content="Learn about Bitcoin, the open, decentralized, and secure protocol for money."/>
   <link rel="canonical" href="https://buoybitcoin.com/what-is-bitcoin.html"/>
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/what-is-bitcoin.html"/>
   <meta property="og:title" content="What is Bitcoin?"/>
