--- a/what-is-lightning.html
+++ b/what-is-lightning.html
@@ -6,6 +6,7 @@
   <title>What is Lightning? - Learn about Lightning, the second layer of the Bitcoin network that makes transactions fast, cheap, and scalable.</title>
   <meta name="description" content="Learn about Lightning, the second layer of the Bitcoin network that makes transactions fast, cheap, and scalable."/>
   <link rel="canonical" href="https://buoybitcoin.com/what-is-lightning.html"/>
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/what-is-lightning.html"/>
   <meta property="og:title" content="What is Lightning?"/>
