--- a/services/btc-pay.html
+++ b/services/btc-pay.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
   <script defer src="https://feedback.fish/ff.js?pid=17f299e6843396" crossorigin="anonymous"></script>
   <script defer src="https://cloud.umami.is/script.js" data-website-id="0895676a-bb0e-488d-9381-a27cf9cf5888"></script>
+<meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
 
 <script>
 (function(){
@@ -123,7 +124,7 @@
 
 </header>
  <main>
-  <div class="category-header">
+  <div class="category-header category-header--vs">
    <h1 id="page-title">BTC Pay</h1>
   </div>
 <div class="breadcrumb-back"><a href="/accept-bitcoin-as-a-merchant.html">< Back to Accept Bitcoin as a merchant</a></div>
@@ -356,6 +357,7 @@
   
   </div>
 </div>
+
 <!-- BUILD:END -->
 
 
