--- a/services/phoenix.html
+++ b/services/phoenix.html
@@ -4,17 +4,17 @@
   <base href="/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Phoenix â€” Review, fees & features | Buoy Bitcoin</title>
-  <meta name="description" content="Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of usâ€¦"/>
+  <title>Phoenix — Review, fees & features | Buoy Bitcoin</title>
+  <meta name="description" content="Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of us…"/>
   <link rel="canonical" href="https://buoybitcoin.com/services/phoenix.html"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://buoybitcoin.com/services/phoenix.html"/>
-  <meta property="og:title" content="Phoenix â€” Review, fees & features | Buoy Bitcoin"/>
-  <meta property="og:description" content="Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of usâ€¦"/>
+  <meta property="og:title" content="Phoenix — Review, fees & features | Buoy Bitcoin"/>
+  <meta property="og:description" content="Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of us…"/>
   <meta property="og:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Phoenix â€” Review, fees & features | Buoy Bitcoin"/>
-  <meta name="twitter:description" content="Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of usâ€¦"/>
+  <meta name="twitter:title" content="Phoenix — Review, fees & features | Buoy Bitcoin"/>
+  <meta name="twitter:description" content="Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of us…"/>
   <meta name="twitter:image" content="https://buoybitcoin.com/android-chrome-512x512.png"/>
   <meta name="twitter:site" content="@jaspervanderee"/>
   <link rel="stylesheet" href="/css/styles.css?v=9">
@@ -44,7 +44,7 @@
   } catch (e) {}
 })();
 </script>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/phoenix.html#webpage","name":"Phoenix â€” Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/phoenix.html","inLanguage":"en","description":"Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of usâ€¦","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/phoenix.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/phoenix.html#service","name":"Phoenix","url":"https://phoenix.acinq.co","mainEntityOfPage":"https://buoybitcoin.com/services/phoenix.html#webpage","provider":{"@type":"Organization","name":"Phoenix","url":"https://phoenix.acinq.co"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","@id":"https://buoybitcoin.com/services/phoenix.html#webpage","name":"Phoenix — Review, fees & features | Buoy Bitcoin","url":"https://buoybitcoin.com/services/phoenix.html","inLanguage":"en","description":"Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of us…","isPartOf":{"@id":"https://buoybitcoin.com/#website"},"publisher":{"@id":"https://buoybitcoin.com/#organization"},"primaryImageOfPage":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"mainEntity":{"@id":"https://buoybitcoin.com/services/phoenix.html#service"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","@id":"https://buoybitcoin.com/services/phoenix.html#service","name":"Phoenix","url":"https://phoenix.acinq.co","mainEntityOfPage":"https://buoybitcoin.com/services/phoenix.html#webpage","provider":{"@type":"Organization","name":"Phoenix","url":"https://phoenix.acinq.co"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","@id":"https://buoybitcoin.com/#organization","name":"Buoy Bitcoin","url":"https://buoybitcoin.com/","logo":{"@type":"ImageObject","url":"https://buoybitcoin.com/android-chrome-512x512.png","width":512,"height":512},"sameAs":["https://x.com/jaspervanderee","https://github.com/jaspervanderee/buoy"]}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","@id":"https://buoybitcoin.com/#website","url":"https://buoybitcoin.com/","name":"Buoy Bitcoin","inLanguage":"en","potentialAction":{"@type":"SearchAction","target":"https://buoybitcoin.com/search.html?q={search_term_string}","query-input":"required name=search_term_string"}}</script><script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://buoybitcoin.com/"},{"@type":"ListItem","position":2,"name":"Spend Bitcoin","item":"https://buoybitcoin.com/spend-bitcoin.html"},{"@type":"ListItem","position":3,"name":"Phoenix","item":"https://buoybitcoin.com/services/phoenix.html"}]}</script></head>
 <body>
   <div class="container">
@@ -281,7 +281,7 @@
       <div class="description-full" style="display:none"><p>Phoenix is designed to provide a simple, self-custodial experience for fast, low-cost Lightning transactions directly on mobile devices, emphasizing ease of use for beginners.</p><p>Phoenix runs a native Lightning node on the user&#039;s device, connecting to ACINQ&#039;s node for automated channel management, eliminating the need for swaps and reducing fees for direct Lightning payments. Additionally, Phoenix allows connections to a user&#039;s own Bitcoin node for enhanced privacy.</p><p>For beginners, Phoenix&#039;s intuitive UI, low-cost Lightning transactions, and self-custodial design make it ideal for those starting with Bitcoin, though channel size limitations may require occasional fee adjustments for frequent receivers. Compared to Breez&#039;s merchant-centric features or Aqua&#039;s Liquid-focused versatility, Phoenix excels in delivering a straightforward, cost-effective Lightning experience with robust privacy options.</p></div>
       <button class="expand-btn" aria-expanded="false">
         <span class="expand-text">Read more</span>
-        <span class="expand-icon"><span class="arrow-down">â†“</span></span>
+        <span class="expand-icon"><span class="arrow-down">↓</span></span>
       </button>
     </div>
   </div>
@@ -351,7 +351,7 @@
 <section id="privacy" class="service-section">
   <h2 class="feature-label">Privacy &amp; Recovery</h2>
   <div class="feature-value">
-    <ul><li>Phoenix cooperates with the ACINQ peer, which currently sees payment destinations and amounts. (source: https://phoenix.acinq.co/faq)</li><li>Channel states are encrypted and stored with the ACINQ peer so you can restore using your seed. (source: https://phoenix.acinq.co/terms)</li><li>The 12-word seed lives only on your device; ACINQ cannot recover it if you lose the words. (source: https://phoenix.acinq.co/terms)</li><li>If ACINQ disappears, force close channels via Settings > Danger zone and wait roughly 720 blocks for funds. (source: https://phoenix.acinq.co/faq)</li><li>Keep Phoenix installed until all forced-closed funds appear in the Final wallet view before sweeping them. (source: https://phoenix.acinq.co/faq)</li><li>Connect Phoenix to your own Electrum server to reduce third-party trust when monitoring channels. (source: https://phoenix.acinq.co/faq)</li></ul>
+    <ul><li>Phoenix cooperates with the ACINQ peer, which currently sees payment destinations and amounts.</li><li>Channel states are encrypted and stored with the ACINQ peer so you can restore using your seed. </li><li>The 12-word seed lives only on your device; ACINQ cannot recover it if you lose the words. </li><li>If ACINQ disappears, force close channels via Settings > Danger zone and wait roughly 720 blocks for funds.</li><li>Keep Phoenix installed until all forced-closed funds appear in the Final wallet view before sweeping them. </li><li>Connect Phoenix to your own Electrum server to reduce third-party trust when monitoring channels. </li></ul>
   </div>
 </section>
 
@@ -368,13 +368,13 @@
   <div class="feature-value">
     
     <div>
-      <h3>From Lost phone â†’ Phoenix</h3>
-      <ol><li>Install Phoenix on a new iOS 16+ or Android 8+ device. (source: https://phoenix.acinq.co/faq)</li><li>Choose Restore my wallet, enter the 12-word seed, and wait for channels to resync. (source: https://phoenix.acinq.co/faq)</li><li>Remove Phoenix from the old device once the new install works; never run both simultaneously. (source: https://phoenix.acinq.co/faq)</li></ol>
+      <h3>From Lost phone → Phoenix</h3>
+      <ol><li>Install Phoenix on a new iOS 16+ or Android 8+ device. </li><li>Choose Restore my wallet, enter the 12-word seed, and wait for channels to resync. </li><li>Remove Phoenix from the old device once the new install works; never run both simultaneously.</li></ol>
     </div>
 
     <div>
-      <h3>From Phoenix â†’ On-chain wallet</h3>
-      <ol><li>Use Settings > Close channels for a cooperative close whenever you want funds on-chain. (source: https://phoenix.acinq.co/terms)</li><li>Wait for closing transactions to confirm before sweeping coins into your preferred wallet. (source: https://phoenix.acinq.co/terms)</li><li>Reserve force close for emergencies because it is slow and incurs higher mining fees. (source: https://phoenix.acinq.co/faq)</li></ol>
+      <h3>From Phoenix → On-chain wallet</h3>
+      <ol><li>Use Settings > Close channels for a cooperative close whenever you want funds on-chain. </li><li>Wait for closing transactions to confirm before sweeping coins into your preferred wallet. </li><li>Reserve force close for emergencies because it is slow and incurs higher mining fees. </li></ol>
     </div>
   </div>
 </section>
@@ -402,11 +402,6 @@
 </details>
 
 <details>
-  <summary>What if ACINQ disappears overnight?</summary>
-  <div><p>Your funds stay safe, but you must force close channels in Settings &gt; Danger zone and wait about 720 blocks before spending on-chain.</p></div>
-</details>
-
-<details>
   <summary>How do on-chain deposits work in Phoenix?</summary>
   <div><p>Phoenix gives you a Bitcoin address; after three confirmations the app swaps the funds to Lightning if fees are below your limit.</p></div>
 </details>
@@ -414,14 +409,9 @@
 <details>
   <summary>How can I restore Phoenix after losing my phone?</summary>
   <div><p>Install Phoenix, choose Restore my wallet, enter the 12-word seed, and let channels resync; Android history will not migrate.</p></div>
-</details>
-
-<details>
-  <summary>Are my channels backed up anywhere?</summary>
-  <div><p>Phoenix encrypts channel data and stores it with the ACINQ peer so you can recover everything by reconnecting with your seed.</p></div>
 </details></div>
 </section>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What fees apply when I pay over Lightning?","acceptedAnswer":{"@type":"Answer","text":"Phoenix charges 0.4% plus 4 sat for every Lightning payment you send."}},{"@type":"Question","name":"What happens if I lack inbound liquidity when receiving?","acceptedAnswer":{"@type":"Answer","text":"Phoenix may open or splice a channel and charge 1% of the amount plus the mining fee when incoming liquidity is insufficient."}},{"@type":"Question","name":"How private are Phoenix payments today?","acceptedAnswer":{"@type":"Answer","text":"ACINQ sees the destination and amount of your payments for now, although privacy upgrades are planned."}},{"@type":"Question","name":"What if ACINQ disappears overnight?","acceptedAnswer":{"@type":"Answer","text":"Your funds stay safe, but you must force close channels in Settings > Danger zone and wait about 720 blocks before spending on-chain."}},{"@type":"Question","name":"How do on-chain deposits work in Phoenix?","acceptedAnswer":{"@type":"Answer","text":"Phoenix gives you a Bitcoin address; after three confirmations the app swaps the funds to Lightning if fees are below your limit."}},{"@type":"Question","name":"How can I restore Phoenix after losing my phone?","acceptedAnswer":{"@type":"Answer","text":"Install Phoenix, choose Restore my wallet, enter the 12-word seed, and let channels resync; Android history will not migrate."}},{"@type":"Question","name":"Are my channels backed up anywhere?","acceptedAnswer":{"@type":"Answer","text":"Phoenix encrypts channel data and stores it with the ACINQ peer so you can recover everything by reconnecting with your seed."}}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"What fees apply when I pay over Lightning?","acceptedAnswer":{"@type":"Answer","text":"Phoenix charges 0.4% plus 4 sat for every Lightning payment you send."}},{"@type":"Question","name":"What happens if I lack inbound liquidity when receiving?","acceptedAnswer":{"@type":"Answer","text":"Phoenix may open or splice a channel and charge 1% of the amount plus the mining fee when incoming liquidity is insufficient."}},{"@type":"Question","name":"How private are Phoenix payments today?","acceptedAnswer":{"@type":"Answer","text":"ACINQ sees the destination and amount of your payments for now, although privacy upgrades are planned."}},{"@type":"Question","name":"How do on-chain deposits work in Phoenix?","acceptedAnswer":{"@type":"Answer","text":"Phoenix gives you a Bitcoin address; after three confirmations the app swaps the funds to Lightning if fees are below your limit."}},{"@type":"Question","name":"How can I restore Phoenix after losing my phone?","acceptedAnswer":{"@type":"Answer","text":"Install Phoenix, choose Restore my wallet, enter the 12-word seed, and let channels resync; Android history will not migrate."}}]}</script>
 
 
 <!-- Rating Modal -->
@@ -584,3 +574,4 @@
   <script defer src="/js/compare.js"></script>
 </body>
 </html>
+
