--- a/services/bitkey.html
+++ b/services/bitkey.html
@@ -139,7 +139,8 @@
 
 <div id="comparison-container">
   <div class="logo-row-sticky">
-    <div class="feature-values logo-row" id="logo-row-container"></div>
+    <div class="feature-values logo-row" id="logo-row-container">
+    </div>
   </div>
   <div id="comparison-table-wrapper">
     
