--- a/services/phoenix.html
+++ b/services/phoenix.html
@@ -140,7 +140,9 @@
 
 <div id="comparison-container">
   <div class="logo-row-sticky">
-    <div class="feature-values logo-row" id="logo-row-container"></div>
+    <div class="feature-values logo-row" id="logo-row-container">
+    <div class="cta-buttons-wrapper"><a href="https://apps.apple.com/app/phoenix-wallet/id1544097028" target="_blank" rel="noopener" class="cta-button" data-variant="ios">iPhone</a><a href="https://play.google.com/store/apps/details?id=fr.acinq.phoenix.mainnet" target="_blank" rel="noopener" class="cta-button" data-variant="android">Android</a></div>
+    </div>
   </div>
   <div id="comparison-table-wrapper">
     
