Trust chips added

--- a/services/phoenix.html
+++ b/services/phoenix.html
@@ -325,7 +325,17 @@
   
   </div>
 </div>
+<div class="trust-chips"><div class="trust-chip">Non-custodial Lightning node on your device</div><div class="trust-chip">Automatic channel management</div><div class="trust-chip">Connect to your own Bitcoin node</div></div>
 <div class="comparison-table">
+
+<section id="tldr" class="service-section">
+  <h2 class="feature-label">TL;DR</h2>
+  <div class="feature-value">
+    <p><img src="/images/checkmark.svg" alt="positive icon" class="checkmark-icon"/> <strong>Best for:</strong> Mobile-first Lightning payments with self-custody and automated channel care.</p>
+    <p><strong>Consider if:</strong> You expect to receive euro Lightning tips without running your own node.</p>
+    <p><img src="/images/cross.svg" alt="negative icon" class="checkmark-icon"/> <strong>Not ideal when:</strong> You need desktop access or stronger payment privacy.</p>
+  </div>
+</section>
 
 <section id="setup" class="service-section">
   <h2 class="feature-label">Getting started</h2>
@@ -345,7 +355,7 @@
           <th>Notes</th>
         </tr>
       </thead>
-      <tbody><tr><td>Paying a â‚¬15 Lightning invoice in a cafÃ©</td><td>0.4% of the amount + 4 sat</td><td>Outgoing Lightning payments include a fixed 4 sat charge plus 0.4% routing fee.</td></tr><tr><td>First â‚¬30 Lightning receive when no channel exists</td><td>â‰ˆ1,000 sat channel open fee + mining fee</td><td>Phoenix opens a channel for you and charges the 1,000 sat creation fee along with the current mining fee.</td></tr><tr><td>Receiving a â‚¬200 payout after your channel fills up</td><td>1% of the amount + mining fee</td><td>Insufficient inbound liquidity triggers a splice-in with a 1% fee plus mining costs.</td></tr><tr><td>Requesting â‚¬500 inbound liquidity before a Berlin market day</td><td>1% of the requested amount + mining fee</td><td>Phoenix lets you prepay for inbound liquidity; the fee credit covers future splice-ins.</td></tr><tr><td>Withdrawing to an exchange through an on-chain swap-out</td><td>User-selected mining fee</td><td>Swap-out transactions use the feerate you choose when sending to an on-chain address.</td></tr></tbody>
+      <tbody><tr><td>Paying a €15 Lightning invoice in a café</td><td>0.4% of the amount + 4 sat</td><td>Outgoing Lightning payments include a fixed 4 sat charge plus 0.4% routing fee.</td></tr><tr><td>First €30 Lightning receive when no channel exists</td><td>≈1,000 sat channel open fee + mining fee</td><td>Phoenix opens a channel for you and charges the 1,000 sat creation fee along with the current mining fee.</td></tr><tr><td>Receiving a €200 payout after your channel fills up</td><td>1% of the amount + mining fee</td><td>Insufficient inbound liquidity triggers a splice-in with a 1% fee plus mining costs.</td></tr><tr><td>Requesting €500 inbound liquidity before a Berlin market day</td><td>1% of the requested amount + mining fee</td><td>Phoenix lets you prepay for inbound liquidity; the fee credit covers future splice-ins.</td></tr><tr><td>Withdrawing to an exchange through an on-chain swap-out</td><td>User-selected mining fee</td><td>Swap-out transactions use the feerate you choose when sending to an on-chain address.</td></tr></tbody>
     </table>
   </div>
 </section>
