--- a/services/umbrel.html
+++ b/services/umbrel.html
@@ -283,7 +283,15 @@
   
   </div>
 </div>
+<div class="comparison-table">
 
+<div class="trust-chips-container">
+  <div class="trust-chips">
+    <div class="trust-chip">Straightforward</div>
+  </div>
+</div>
+
+</div>
 <!-- BUILD:END -->
 
 
