--- a/services/wasabi.html
+++ b/services/wasabi.html
@@ -333,7 +333,17 @@
   
   </div>
 </div>
+<div class="comparison-table">
 
+<div class="trust-chips-container">
+  <div class="trust-chips">
+    <div class="trust-chip">Non-custodial</div>
+    <div class="trust-chip">Open source</div>
+    <div class="trust-chip">Privacy focused</div>
+  </div>
+</div>
+
+</div>
 <!-- BUILD:END -->
 
 
