--- a/services/unchained.html
+++ b/services/unchained.html
@@ -333,7 +333,15 @@
   
   </div>
 </div>
+<div class="comparison-table">
 
+<div class="trust-chips-container">
+  <div class="trust-chips">
+    <div class="trust-chip">Estate planning</div>
+  </div>
+</div>
+
+</div>
 <!-- BUILD:END -->
 
 
