--- a/services/swan.html
+++ b/services/swan.html
@@ -339,7 +339,18 @@
   </div>
 </div>
 
+<div class="comparison-table">
 
+<section id="privacy" class="service-section">
+  <h2 class="feature-label">Privacy &amp; Safety</h2>
+  <div id="privacy-region">
+    <div class="feature-label sublabel">Country caveats</div>
+    <div class="feature-value">
+      <ul><li>Availability and funding options vary by region; confirm in your app store/on-ramp.</li><li>Install only from the official publisher; verify the developer name.</li></ul>
+    </div>
+  </div>
+</section>
+</div>
 <!-- BUILD:END -->
 
 
